--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^10.0.17",
     "@material-ui/core": "^4.4.1",
     "@material-ui/icons": "^4.4.1",
     "axios": "^0.19.0",
@@ -12,6 +13,7 @@
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-spinners": "^0.6.1",
     "socket.io-client": "^2.2.0"
   },
   "scripts": {
